--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ function myFunction() {
 <a class="button" onclick="blank('https://cloudfuntime.vercel.app/clients.html');">
       <img src="https://th.bing.com/th/id/R.281a0334856a6d8e79f15aefa0ef81cf?rik=eigkhhOk15rklw&pid=ImgRaw&r=0" alt="run 3 ">
     </a>
-<a class="button" onclick="blank('https://4hk0.github.io/projects/ducklife4/index.html');">
+<a class="button" onclick="blank('https://main.dd8vt524eqsk2.amplifyapp.com/projects/ducklife4/index.html');">
       <img src="https://img.poki.com/cdn-cgi/image/width=600,height=600,fit=cover,g=0.5x0.5,f=auto/d0048d89-e4fa-4adb-9c77-adc51e4e1c6b.png" alt="run 3 ">
     </a>
 <a class="button" onclick="blank('https://bleafy.github.io/games/cookieclicker/');">
