--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 window.onload = myFunction;
 
 function myFunction() {
-  alert("hey wazzup blud quantum is in beta also join the discord we are very silly🤑🤑🤑 https://discord.gg/C8nXfGAr");
+  alert("wazzup blud this is quantum. pls join the discord we are very silly🤑🤑🤑 https://discord.gg/C8nXfGAr");
 }
 </script>
 
