--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ function myFunction() {
     <a class="button" onclick="blank('https://sanicbtw.github.io/FNF-PsychEngine-0.6-HTML5/');">
       <img src="https://th.bing.com/th/id/R.7936acf97d736dbfd5613c09a3f6acfa?rik=KxpihNWAM93B5w&pid=ImgRaw&r=0" alt="fnf">
     </a>
-    <a class="button" onclick="blank('https://hotamago.github.io/sans/');">
+    <a class="button" onclick="blank('https://sans.nyaasu.top/');">
       <img src="https://play-lh.googleusercontent.com/T08jAj6GRGQGPOw41mQrvM_bz0ZFbqtZVL8YMbLoAy-Qu6zmLwfV7BNrPCPpUX-ZWQ" alt="sans">
     </a>
 <a class="button" onclick="blank('https://run3unblocked.github.io/');">
