--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snowflakes</title>
+<title>Quantum</title>
 <style>
   body {
   }
@@ -169,6 +169,7 @@
 </html>
 
 
+
 <!DOCTYPE html>
 <html>
 <body>
@@ -200,9 +201,7 @@ function myFunction() {
       overflow: hidden;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #27303c, #354258, 
-#42546e, #4e6684);
-      color: #1e1e1e;
+      background-color: #1e1e1e;
       font-weight: bold;
       color: #555; /* Set text color to gray */
     }
@@ -251,6 +250,7 @@ function myFunction() {
       transform: translate(-50%, -50%);
       width: 200px;
       height: 200px;
+      border: 10px solid #222;
       border-radius: 50%;
       box-sizing: border-box;
       background-image: url('https://clipartcraft.com/images/earth-transparent-animated-gif-8.png');
