--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
 </html>
 
 
-
 <!DOCTYPE html>
 <html>
 <body>
@@ -201,7 +200,8 @@ function myFunction() {
       overflow: hidden;
       margin: 0;
       padding: 0;
-      background-color: #1e1e1e;
+      background: linear-gradient(180deg, #1e1e1e, #555555);
+      color: #000000;
       font-weight: bold;
       color: #555; /* Set text color to gray */
     }
@@ -250,7 +250,7 @@ function myFunction() {
       transform: translate(-50%, -50%);
       width: 200px;
       height: 200px;
-      border: 10px solid #222;
+      border: 10px solid #333;
       border-radius: 50%;
       box-sizing: border-box;
       background-image: url('https://clipartcraft.com/images/earth-transparent-animated-gif-8.png');
@@ -502,3 +502,8 @@ function myFunction() {
   </script>
 </body>
 </html>
+
+<audio autoplay>
+  <source src="songs.mp4" type="audio/mp4">
+  Your browser does not support the audio tag.
+</audio>
