--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Quantum</title>
+<title>Snowflakes</title>
 <style>
   body {
   }
@@ -193,18 +193,17 @@ function myFunction() {
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      font-size: 16px;
-      text-align: center;
-      overflow: hidden;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(180deg, #1e1e1e, #555555);
-      color: #000000;
-      font-weight: bold;
-      color: #555; /* Set text color to gray */
-    }
+body {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  text-align: center;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(180deg, #1e1e1e, #555555); /* Adjust gradient colors and direction */
+  color: #555; /* Set text color */
+  font-weight: bold;
+}
 
     .header {
       padding: 20px 10px; /* Adjust top padding */
@@ -417,6 +416,7 @@ function myFunction() {
 <a class="button" onclick="blank('https://www.ehabgames.com/games/bad-ice-cream/index.html');">
       <img src="https://www.speedrun.com/static/game/pd0lk0de/cover.png?v=575f7d6" alt="run 3 ">
     </a>
+
 
   <script>
     // Array of random placeholder texts
