--- a/index.html
+++ b/index.html
@@ -193,17 +193,18 @@ function myFunction() {
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum</title>
   <style>
-body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  text-align: center;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(180deg, #1e1e1e, #555555); /* Adjust gradient colors and direction */
-  color: #555; /* Set text color */
-  font-weight: bold;
-}
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      text-align: center;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(180deg, #1e1e1e, #555555);
+      color: #000000;
+      font-weight: bold;
+      color: #555; /* Set text color to gray */
+    }
 
     .header {
       padding: 20px 10px; /* Adjust top padding */
@@ -417,6 +418,7 @@ body {
       <img src="https://www.speedrun.com/static/game/pd0lk0de/cover.png?v=575f7d6" alt="run 3 ">
     </a>
 
+  </div>
 
   <script>
     // Array of random placeholder texts
