--- a/index.html
+++ b/index.html
@@ -193,18 +193,17 @@ function myFunction() {
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      font-size: 16px;
-      text-align: center;
-      overflow: hidden;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(180deg, #1e1e1e, #555555);
-      color: #000000;
-      font-weight: bold;
-      color: #555; /* Set text color to gray */
-    }
+body {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  text-align: center;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(360deg, #555555, #1e1e1e); /* Adjust gradient colors and direction */
+  color: #555; /* Set text color */
+  font-weight: bold;
+}
 
     .header {
       padding: 20px 10px; /* Adjust top padding */
@@ -418,7 +417,6 @@ function myFunction() {
       <img src="https://www.speedrun.com/static/game/pd0lk0de/cover.png?v=575f7d6" alt="run 3 ">
     </a>
 
-  </div>
 
   <script>
     // Array of random placeholder texts
