--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
+<html>
+<body>
+
+
+<script>
+// Call myFunction when the page loads
+window.onload = myFunction;
+
+function myFunction() {
+  alert("hey wazza blud quantum is in beta also join the cord https://discord.gg/C8nXfGAr");
+}
+</script>
+
+</body>
+</html>
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Quantum</title>
+<title>Snowflakes</title>
 <style>
   body {
   }
@@ -200,11 +218,12 @@ body {
   overflow: hidden;
   margin: 0;
   padding: 0;
-  background: linear-gradient(360deg, #555555, #1e1e1e); /* Adjust gradient colors and direction */
-  color: #555; /* Set text color */
+  background: linear-gradient(360deg, #555555, #1e1e1e);
+  background-repeat: repeat;
+  color: #555;
   font-weight: bold;
+  min-height: 100vh;
 }
-
     .header {
       padding: 20px 10px; /* Adjust top padding */
       color: #555;
@@ -365,16 +384,16 @@ body {
       <img src="https://play-lh.googleusercontent.com/v7KwGdPjJGjJjRXn46sck4DwDBdKSeRzGN44CjiXUtKV0jjOi51Bt4wcXud0m-SkXg=w240-h480-rw" alt="ovo">
     </a>
 <a class="button" onclick="blank('https://dddavit.github.io/subway/');">
-      <img src="https://img.poki.com/cdn-cgi/image/quality=78,width=350,height=350,fit=cover,f=auto/5e970e72be8c190cb289e6261a63c10c.png" alt="FNAF movie">
+      <img src="https://th.bing.com/th/id/R.d270886eef3b15cbeac105edc7522005?rik=In78KYB1V4thGQ&riu=http%3a%2f%2fcdn5.8fat.com%2ficon%2fd2%2f70%2fd270886eef3b15cbeac105edc7522005.jpg&ehk=B8851SpYVcIzzlRGOhWN517q%2bVOMf%2fNdqgQSJG6lK6w%3d&risl=&pid=ImgRaw&r=0" alt="FNAF movie">
     </a>
 <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
-   <a class="button" onclick="blank('https://burgerbounty.github.io/s4/getaway-shootout/');">
-      <img src="https://th.bing.com/th/id/OIP.PPom7Z99XBMeyX9oBa_LRQAAAA?rs=1&pid=ImgDetMain" alt="FNAF 1">
+   <a class="button" onclick="blank('hhttps://tylerpalko.github.io/gamehub/badicecream/');">
+      <img src="https://th.bing.com/th/id/OIP.V199bz0Tdl350wCW2-y1ywAAAA?w=256&h=256&rs=1&pid=ImgDetMain%22%20alt=%22bad%20icecream" alt="FNAF 1">
     </a>
-   <a class="button" onclick="blank('https://www.ehabgames.com/games/basketbros-io/index.html');">
-      <img src="https://elite2site.com/images/basketbros.jpg" alt="basket bros">
+   <a class="button" onclick="blank('https://monkemart.github.io/');">
+      <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="basket bros">
     </a>
    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cui%2F');">
       <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="FNAF 1">
@@ -411,10 +430,10 @@ body {
       <img src="https://img.poki.com/cdn-cgi/image/width=600,height=600,fit=cover,g=0.5x0.5,f=auto/d0048d89-e4fa-4adb-9c77-adc51e4e1c6b.png" alt="run 3 ">
     </a>
 <a class="button" onclick="blank('https://bleafy.github.io/games/cookieclicker/');">
-      <img src="https://th.bing.com/th/id/R.98626247c0801762e4eb11dc481b23b4?rik=GUiQy2FMBKcPHA&pid=ImgRaw&r=0" alt="run 3 ">
+      <img src="https://th.bing.com/th/id/R.98626247c0801762e4eb11dc481b23b4?rik=GUiQy2FMBKcPHA&pid=ImgRaw&r=0" alt="cookie clicker ">
     </a>
-<a class="button" onclick="blank('https://www.ehabgames.com/games/bad-ice-cream/index.html');">
-      <img src="https://www.speedrun.com/static/game/pd0lk0de/cover.png?v=575f7d6" alt="run 3 ">
+<a class="button" onclick="blank('https://burgerbounty.github.io/s4/getaway-shootout/');">
+      <img src="https://th.bing.com/th/id/OIP.PPom7Z99XBMeyX9oBa_LRQAAAA?rs=1&pid=ImgDetMain" alt="bad icecream">
     </a>
 
 
