--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function myFunction() {
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snowflakes</title>
+<title>Quantum</title>
 <style>
   body {
   }
