--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ body {
 <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
-   <a class="button" onclick="blank('hhttps://tylerpalko.github.io/gamehub/badicecream/');">
+   <a class="button" onclick="blank('https://tylerpalko.github.io/gamehub/badicecream');">
       <img src="https://th.bing.com/th/id/OIP.V199bz0Tdl350wCW2-y1ywAAAA?w=256&h=256&rs=1&pid=ImgDetMain%22%20alt=%22bad%20icecream" alt="FNAF 1">
     </a>
    <a class="button" onclick="blank('https://monkemart.github.io/');">
