--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+
+    <!-- Audio element -->
+    <audio id="audio" src="robloc.mp3"></audio>
+
+    <script>
+        // JavaScript to play the audio on click
+        document.addEventListener('click', function() {
+            var audio = document.getElementById('audio');
+            audio.play();
+        });
+    </script>
+</body>
+</html>
+
+
+
+
+
+<!DOCTYPE html>
 <html>
 <body>
 
