--- a/index.html
+++ b/index.html
@@ -1,4 +1,37 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hot Image</title>
+    <style>
+        .container {
+            position: relative;
+        }
+
+        .top-left {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img class="top-left" src="https://i.pinimg.com/originals/76/eb/de/76ebdef715edad3d1da072f60a2f86a2.png" alt="Hot Image" width="25" height="24" onclick="playAudio()">
+    </div>
+    
+    <script>
+        function playAudio() {
+            var audio = new Audio('robloc.mp3');
+            audio.play();
+        }
+    </script>
+</body>
+</html>
+
+
+<!DOCTYPE html>
 <html>
 <body>
 
