--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hot Image</title>
+    <title>Quantum</title>
     <style>
         .container {
             position: relative;
@@ -13,12 +13,13 @@
             position: absolute;
             top: 0;
             left: 0;
+            cursor: pointer; /* Ensure cursor changes to pointer when hovering over image */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img class="top-left" src="https://i.pinimg.com/originals/76/eb/de/76ebdef715edad3d1da072f60a2f86a2.png" alt="Hot Image" width="25" height="24" onclick="playAudio()">
+        <img class="top-left" src="https://i.pinimg.com/originals/76/eb/de/76ebdef715edad3d1da072f60a2f86a2.png" alt="Hot Image" width="100" height="100" onclick="playAudio()">
     </div>
     
     <script>
@@ -29,6 +30,7 @@
     </script>
 </body>
 </html>
+
 
 
 <!DOCTYPE html>
