--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantum</title>
+    <title>Hot Image</title>
     <style>
         .container {
             position: relative;
@@ -13,13 +13,15 @@
             position: absolute;
             top: 0;
             left: 0;
-            cursor: pointer; /* Ensure cursor changes to pointer when hovering over image */
+            width: 25px;
+            height: 25px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img class="top-left" src="https://i.pinimg.com/originals/76/eb/de/76ebdef715edad3d1da072f60a2f86a2.png" alt="Hot Image" width="100" height="100" onclick="playAudio()">
+        <img class="top-left" src="https://i.pinimg.com/originals/76/eb/de/76ebdef715edad3d1da072f60a2f86a2.png" alt="Hot Image" width="25" height="25" onclick="playAudio()">
     </div>
     
     <script>
@@ -30,6 +32,7 @@
     </script>
 </body>
 </html>
+
 
 
 
