--- a/index.html
+++ b/index.html
@@ -3,35 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hot Image</title>
-    <style>
-        .container {
-            position: relative;
-        }
-
-        .top-left {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 25px;
-            height: 25px;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
-        <img class="top-left" src="https://i.pinimg.com/originals/76/eb/de/76ebdef715edad3d1da072f60a2f86a2.png" alt="Hot Image" width="25" height="25" onclick="playAudio()">
-    </div>
-    
+    <!-- Audio element -->
+    <audio id="audio" src="robloc.mp3"></audio>
+
     <script>
-        function playAudio() {
-            var audio = new Audio('robloc.mp3');
+        // JavaScript to play the audio on click
+        document.addEventListener('click', function() {
+            var audio = document.getElementById('audio');
             audio.play();
-        }
+        });
     </script>
 </body>
 </html>
+
 
 
 
