--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+<html>
 <body>
-    <!-- Audio element -->
-    <audio id="audio" src="robloc.mp3"></audio>
 
-    <script>
-        // JavaScript to play the audio on click
-        document.addEventListener('click', function() {
-            var audio = document.getElementById('audio');
-            audio.play();
-        });
-    </script>
+<audio autoplay>
+  <source src="robloc.ogg" type="audio/ogg">
+  <source src="robloc.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 </body>
 </html>
 
