--- a/index.html
+++ b/index.html
@@ -1,15 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Retro Roblox Achievement</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+    }
+    #achievement {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        display: none;
+    }
+    .achievement-box {
+        background-color: rgba(255, 255, 255, 0.9);
+        color: #6c7a89;
+        padding: 10px;
+        border-radius: 5px;
+        border: 3px solid #6c7a89;
+        max-width: 300px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 14px;
+    }
+    .achievement-image {
+        width: 50px;
+        height: 50px;
+        float: left;
+        margin-right: 10px;
+    }
+</style>
+</head>
 <body>
-
-<audio autoplay>
-  <source src="robloc.ogg" type="audio/ogg">
-  <source src="robloc.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
+<audio id="roblox-audio">
+    <source src="robloc.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
 </audio>
+<div id="achievement">
+    <div class="achievement-box">
+        <img class="achievement-image" src="https://tr.rbxcdn.com/1e5e490f95d30671e35a4e952485905d/420/420/Image/Png" alt="Retro Roblox Achievement">
+        <p>Noob Achievement</p>
+        <div style="clear: both;"></div>
+    </div>
+</div>
+<script>
+    const achievement = document.getElementById('achievement');
+    const robloxAudio = document.getElementById('roblox-audio');
 
+    let keySequence = '';
+
+    document.addEventListener('keydown', function(event) {
+        keySequence += event.key.toUpperCase();
+        if (keySequence === 'NOOB') {
+            robloxAudio.play();
+            displayAchievement();
+            keySequence = '';
+        } else if (keySequence.length > 4) {
+            keySequence = '';
+        }
+    });
+
+    function displayAchievement() {
+        achievement.style.display = 'block';
+        setTimeout(function() {
+            achievement.style.opacity = '1';
+        }, 100);
+        setTimeout(function() {
+            fadeOutAchievement();
+        }, 3000);
+    }
+
+    function fadeOutAchievement() {
+        let opacity = 1;
+        const fadeInterval = setInterval(function() {
+            if (opacity <= 0) {
+                clearInterval(fadeInterval);
+                achievement.style.display = 'none';
+            } else {
+                achievement.style.opacity = opacity;
+                opacity -= 0.05;
+            }
+        }, 50);
+    }
+</script>
 </body>
 </html>
+
 
 
 
