--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Quantum</title>
 <style>
     body {
         font-family: Arial, sans-serif;
         text-align: center;
+        margin: 0;
+        padding: 0;
     }
     #achievement {
         position: fixed;
         bottom: 20px;
-        right: 20px;
+        left: 20px;
         display: none;
     }
     .achievement-box {
@@ -21,14 +22,15 @@
         padding: 10px;
         border-radius: 5px;
         border: 3px solid #6c7a89;
-        max-width: 300px;
+        max-width: 400px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 14px;
+        display: flex;
+        align-items: center;
     }
     .achievement-image {
         width: 50px;
         height: 50px;
-        float: left;
         margin-right: 10px;
     }
 </style>
@@ -41,8 +43,10 @@
 <div id="achievement">
     <div class="achievement-box">
         <img class="achievement-image" src="https://tr.rbxcdn.com/1e5e490f95d30671e35a4e952485905d/420/420/Image/Png" alt="Retro Roblox Achievement">
-        <p>Noob Achievement</p>
-        <div style="clear: both;"></div>
+        <div>
+            <p>noob achievement</p>
+            <p>haha ur a noob pwn3d</p>
+        </div>
     </div>
 </div>
 <script>
