--- a/index.html
+++ b/index.html
@@ -1,24 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-
-<script>
-window.onbeforeunload = function() {
-  return "Are you sure you want to leave this page?";
-};
-</script>
-
-
-</body>
-</html>
-
-
-
-<!DOCTYPE html>
 <html>
 <body>
 
@@ -28,7 +8,7 @@ window.onbeforeunload = function() {
 window.onload = myFunction;
 
 function myFunction() {
-  alert("hey wazza blud quantum is in beta also join the cord https://discord.gg/C8nXfGAr");
+  alert("hey wazza blud quantum is in beta also join the discord https://discord.gg/C8nXfGAr");
 }
 </script>
 
@@ -41,7 +21,6 @@ function myFunction() {
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Quantum</title>
 <style>
   body {
   }
@@ -409,11 +388,14 @@ body {
 <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
-   <a class="button" onclick="blank('https://tylerpalko.github.io/gamehub/badicecream');">
+   <a class="button" onclick="blank('hhttps://tylerpalko.github.io/gamehub/badicecream/');">
       <img src="https://th.bing.com/th/id/OIP.V199bz0Tdl350wCW2-y1ywAAAA?w=256&h=256&rs=1&pid=ImgDetMain%22%20alt=%22bad%20icecream" alt="FNAF 1">
     </a>
    <a class="button" onclick="blank('https://monkemart.github.io/');">
       <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="basket bros">
+    </a>
+   <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
+      <img src="https://i.imgur.com/p43D8Wd.png" alt="sonic 3 air">
     </a>
    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cui%2F');">
       <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="FNAF 1">
@@ -446,7 +428,7 @@ body {
 <a class="button" onclick="blank('https://cloudfuntime.vercel.app/clients.html');">
       <img src="https://th.bing.com/th/id/R.281a0334856a6d8e79f15aefa0ef81cf?rik=eigkhhOk15rklw&pid=ImgRaw&r=0" alt="run 3 ">
     </a>
-<a class="button" onclick="blank('https://4hk0.github.io/projects/ducklife4/index.html');">
+<a class="button" onclick="blank('https://www.hoodamath.com/mobile/games/duck-life-4/game.html?nocheckorient=1');">
       <img src="https://img.poki.com/cdn-cgi/image/width=600,height=600,fit=cover,g=0.5x0.5,f=auto/d0048d89-e4fa-4adb-9c77-adc51e4e1c6b.png" alt="run 3 ">
     </a>
 <a class="button" onclick="blank('https://bleafy.github.io/games/cookieclicker/');">
@@ -454,6 +436,9 @@ body {
     </a>
 <a class="button" onclick="blank('https://burgerbounty.github.io/s4/getaway-shootout/');">
       <img src="https://th.bing.com/th/id/OIP.PPom7Z99XBMeyX9oBa_LRQAAAA?rs=1&pid=ImgDetMain" alt="bad icecream">
+    </a>
+<a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/index.html');">
+      <img src="https://gointerstellar.app/assets/media/icons/basket-bros.webp" alt="bad icecream">
     </a>
 
 
