--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 window.onload = myFunction;
 
 function myFunction() {
-  alert("hey wazza blud quantum is in beta also join the discord https://discord.gg/C8nXfGAr");
+  alert("wazzup blud pls join the discord we need you!!! https://discord.gg/C8nXfGAr");
 }
 </script>
 
