--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             function showAlert() {
                 const messages = [
-                    "wazzup blud quantum is in beta. pls join the discord!! https://discord.gg/C8nXfGAr",
+                    "wazzup blud quantum is in beta. pls join the discord!! we are silly! 🤑🤑🤑 https://discord.gg/C8nXfGAr",
                     "hey this is your battery"
                 ];
 
