--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ body {
     <a class="button" onclick="blank('https://ovo-alpha.vercel.app/versions/1.4.4b/index.html');">
       <img src="https://play-lh.googleusercontent.com/v7KwGdPjJGjJjRXn46sck4DwDBdKSeRzGN44CjiXUtKV0jjOi51Bt4wcXud0m-SkXg=w240-h480-rw" alt="ovo">
     </a>
-<a class="button" onclick="blank('https://dddavit.github.io/subway/');">
+<a class="button" onclick="blank('https://4hk0.github.io/projects/subway-surfers/index.html');">
       <img src="https://www.feirox.com/rivu/2014/03/Subway-Surfers-NewYork-1.png" alt="FNAF movie">
     </a>
 <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
