--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@ body {
       background-color: #0056b3;
     }
 
-    .button-container {
-      margin-top: 01px;
-    }
-
+.button-container {
+  position: relative; /* Ensure the container is positioned relative to its parent */
+  top: -69px; /* Adjust the top position as needed to move the buttons higher up */
+}
     .button {
       display: inline-block;
       overflow: hidden;
@@ -341,7 +341,7 @@ body {
 
     .button img {
       display: block;
-      width: 50px; /* Adjust the size as needed */
+      width: 42px; /* Adjust the size as needed */
       height: auto;
     }
 
@@ -376,29 +376,35 @@ body {
     <a class="button" onclick="blank('https://sevenworksdev.github.io/SM64-JS/');">
       <img src="https://th.bing.com/th/id/OIP.BvriPJra1wbseYngRo0dpwAAAA?rs=1&pid=ImgDetMain" alt="SM64">
     </a>
-    <a class="button" onclick="blank('https://ttfq.github.io/retrobowl//');">
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/retro-bowl/index.html');">
       <img src="https://th.bing.com/th/id/R.9d0bdbd48b96dc29e6dc015082209462?rik=XlC3BCr1QNkK4w&pid=ImgRaw&r=0" alt="RETRO BOWL">
     </a>
     <a class="button" onclick="blank('https://ovo-alpha.vercel.app/versions/1.4.4b/index.html');">
-      <img src="https://play-lh.googleusercontent.com/v7KwGdPjJGjJjRXn46sck4DwDBdKSeRzGN44CjiXUtKV0jjOi51Bt4wcXud0m-SkXg=w240-h480-rw" alt="ovo">
+      <img src="https://arjun99ab.github.io/ovo/assets/img/home-icon.png" alt="ovo">
     </a>
-<a class="button" onclick="blank('https://4hk0.github.io/projects/subway-surfers/index.html');">
-      <img src="https://www.feirox.com/rivu/2014/03/Subway-Surfers-NewYork-1.png" alt="FNAF movie">
+<a class="button" onclick="blank('https://a6936-19375562.cluster7.canvas-user-content.com/courses/6936~1010708/files/6936~19375562/course%20files/vfcd/index.html?context_id=6936~1010708context_type=Course&download=1&id=69360000019375562&inline=1');">
+      <img src="https://th.bing.com/th/id/OIP.wTyDM9r3GsSjywIfZj2EKgAAAA?w=300&h=300&rs=1&pid=ImgDetMain" alt="FNAF movie">
     </a>
 <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
-   <a class="button" onclick="blank('hhttps://tylerpalko.github.io/gamehub/badicecream/');">
+   <a class="button" onclick="blank('https://kdata1.com/2022/11/bad-ice-cream/');">
       <img src="https://th.bing.com/th/id/OIP.V199bz0Tdl350wCW2-y1ywAAAA?w=256&h=256&rs=1&pid=ImgDetMain%22%20alt=%22bad%20icecream" alt="FNAF 1">
     </a>
-   <a class="button" onclick="blank('https://monkemart.github.io/');">
+   <a class="button" onclick="blank('https://ubg365.github.io/monkey-mart/play.html');">
       <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="basket bros">
     </a>
    <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
-      <img src="https://i.imgur.com/p43D8Wd.png" alt="sonic 3 air">
+      <img src="https://m.gjcdn.net/game-screenshot/400/16208740-hcqnh2rx-v4.jpg" alt="sonic 3 air">
+    </a>
+ <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/index.html');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg" alt="sonic 3 air">
     </a>
    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cui%2F');">
       <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="FNAF 1">
+    </a>
+<a class="button" onclick="blank('https://levelsharesquare.com/html5/supermarioconstruct/');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/supermarioconstruct/media/icons/icon-128.png" alt="FNAF 1">
     </a>
   </div>
 
@@ -416,10 +422,10 @@ body {
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
       <img src="https://th.bing.com/th/id/OIP.yp_k2YKOplhIXyEvRJEOJwHaHa?rs=1&pid=ImgDetMain" alt="doom">
     </a>
-    <a class="button" onclick="blank('https://sanicbtw.github.io/FNF-PsychEngine-0.6-HTML5/');">
+    <a class="button" onclick="blank('https://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r114.zip/?NewgroundsAPI_PublisherID=1&NewgroundsAPI_SandboxID=664bbe2bc5fd0&NewgroundsAPI_SessionID=&NewgroundsAPI_UserName=%26lt%3Bdeleted%26gt%3B&NewgroundsAPI_UserID=0&ng_username=%26lt%3Bdeleted%26gt%3B');">
       <img src="https://th.bing.com/th/id/R.7936acf97d736dbfd5613c09a3f6acfa?rik=KxpihNWAM93B5w&pid=ImgRaw&r=0" alt="fnf">
     </a>
-    <a class="button" onclick="blank('https://hotamago.github.io/sans/');">
+    <a class="button" onclick="blank('https://sans.nyaasu.top/');">
       <img src="https://play-lh.googleusercontent.com/T08jAj6GRGQGPOw41mQrvM_bz0ZFbqtZVL8YMbLoAy-Qu6zmLwfV7BNrPCPpUX-ZWQ" alt="sans">
     </a>
 <a class="button" onclick="blank('https://run3unblocked.github.io/');">
@@ -431,14 +437,20 @@ body {
 <a class="button" onclick="blank('https://www.hoodamath.com/mobile/games/duck-life-4/game.html?nocheckorient=1');">
       <img src="https://img.poki.com/cdn-cgi/image/width=600,height=600,fit=cover,g=0.5x0.5,f=auto/d0048d89-e4fa-4adb-9c77-adc51e4e1c6b.png" alt="run 3 ">
     </a>
-<a class="button" onclick="blank('https://bleafy.github.io/games/cookieclicker/');">
+<a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/cookie-clicker/');">
       <img src="https://th.bing.com/th/id/R.98626247c0801762e4eb11dc481b23b4?rik=GUiQy2FMBKcPHA&pid=ImgRaw&r=0" alt="cookie clicker ">
     </a>
 <a class="button" onclick="blank('https://burgerbounty.github.io/s4/getaway-shootout/');">
       <img src="https://th.bing.com/th/id/OIP.PPom7Z99XBMeyX9oBa_LRQAAAA?rs=1&pid=ImgDetMain" alt="bad icecream">
     </a>
 <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/index.html');">
-      <img src="https://gointerstellar.app/assets/media/icons/basket-bros.webp" alt="bad icecream">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/thumb.jpg" alt="bad icecream">
+    </a>
+<a class="button" onclick="blank('https://lunarsync.smartfoloo.space/assets/fonts/geometry-dash/');">
+      <img src="https://th.bing.com/th/id/R.2a527448abbb085f6c89793cfb5f65f5?rik=A7ss82CSOJPrkg&riu=http%3a%2f%2fvignette2.wikia.nocookie.net%2fgeometry-dash%2fimages%2f9%2f90%2fGeometryDash.png%2frevision%2flatest%3fcb%3d20160224042843&ehk=Hvk2rFdCmF08iQinZYieMsLbvo4NDNdKYic8xB6GqZE%3d&risl=&pid=ImgRaw&r=0" alt="bad icecream">
+    </a>
+<a class="button" onclick="blank('https://levelsharesquare.com/html5/yoshisfabricationstation/');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/yoshifabrication/icons/icon-512.png">
     </a>
 
 
@@ -449,7 +461,8 @@ body {
       "What the 卐",
       "I Love 🧽",
       "Hi 🅱ryce",
-      "Me When Im: ☺"
+      "Me When Im: ☺",
+      "OmegaLul"
     ];
 
     // Function to set random placeholder text
